fix colon dark mode

--- a/src/styles.css
+++ b/src/styles.css
@@ -120,6 +120,7 @@ body:not(.dark) #toggle-light-mode {
 
 .colon {
     font-size: 1.5rem;
+    color: var(--text-color);
 }
 
 .label {
